# DE_final_deploy

./: ACCEPTANCE_TESTS.md  LAB_DEPLOY_STEP_BY_STEP_CN.md  LAB_MICROK8S_PLAN_CN.md  PIPELINE_DESIGN_AND_TECHNOLOGY_CHOICES.md  README.md  TODAY_CHANGES_2026-04-23.md  buildkitd.toml  main.py  pyproject.toml
common/: __init__.py  config.py  minio_utils.py  open_meteo_utils.py  pg_utils.py  transformations.py
dags/: climate_collect_weather.py  climate_prepare_weather.py  climate_publish_analytics.py
dags/__pycache__/: climate_collect_weather.cpython-310.pyc.2773270492080
docker/airflow/: Dockerfile  requirements.txt
k8s/: airflow.yaml  minio.yaml  namespace.yaml  postgres.yaml  secrets.yaml
scripts/: build_and_push.sh  deploy.sh  lab_microk8s_runbook.sh
